fixed an utility class for huge margins on mobile

--- a/src/theme/base/_utilities.scss
+++ b/src/theme/base/_utilities.scss
@@ -28,7 +28,7 @@
 }
 
 .u-margin-bottom-xxl {
-  margin-bottom: 14rem !important;
+  margin-bottom: 8rem !important;
 
   @include respond(tab-port) {
     margin-bottom: 12rem !important;
